fix: mobile spacings

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -45,7 +45,8 @@
 .card {
   background-color: var(--clr-background);
   border-radius: 0px;
-  height: calc(100vh - 116px);
+  /* min-height: calc(100vh - 116px); */
+  min-height: calc((var(--vh, 1vh) * 100) - 116px);
 }
 
 .card .icon-box {
