--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -6,7 +6,9 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    height: calc(100vh - 205px);
+    /* height: calc(100vh - 205px); */
+    height: calc((var(--vh, 1vh) * 100) - 205px);
+
 }
 
 .chat-bubble-container {
